--- a/70_pf/jeep/index.html
+++ b/70_pf/jeep/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/favicon.svg" type="image/svg+xml">
     <title>Jeep</title>
-    <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="/w0310/70_pf/jeep/script/index.js"></script>
@@ -19,44 +19,65 @@
                 <div class="nav_bg"></div>
                 <ul class="main">
                     <li><a href="#">모델소개</a>
-                    <ul class="sub_1">
-                        <li>
-                            <div class="model_1">
-                                <div class="model_container">
-                                    <div class="img">
-                                        <img src="/w0310/70_pf/jeep/images/sub/model_1.png" alt="">
-                                    </div>
-                                    <div class="model_txt">
-                                        <div class="model_uptxt"></div>
-                                        <div class="model_downtxt"></div>
+                        <ul class="sub_1">
+                            <li>
+                                <div class="model_1">
+                                    <div class="model_container">
+                                        <div class="img">
+                                            <img src="/w0310/70_pf/jeep/images/sub/model_1.png" alt="">
+                                        </div>
+                                        <div class="model_txt">
+                                            <div class="model_uptxt"></div>
+                                            <div class="model_downtxt"></div>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                        </li>
-                    </ul>
+                            </li>
+                        </ul>
                     </li>
                     <li><a href="#">구입문의</a></li>
                     <li>
                         <div class="logo_container">
-                            <a href="#"><img src="/w0310/70_pf/jeep/images/logo_w.png" alt="기본 로고" class="logo default"></a>
+                            <a href="#"><img src="/w0310/70_pf/jeep/images/logo_w.png" alt="기본 로고"
+                                    class="logo default"></a>
                             <a href="#"><img src="/w0310/70_pf/jeep/images/logo.png" alt="호버 로고" class="logo hover"></a>
                         </div>
                     </li>
                     <li><a href="#">고객지원</a></li>
                     <li>
                         <div class="logo_container_2">
-                            <a href="#"><img src="/w0310/70_pf/jeep/images/jeepwave_w.png" alt="기본 로고" class="logo2 default"></a>
-                            <a href="#"><img src="/w0310/70_pf/jeep/images/jeepwave.png" alt="호버 로고" class="logo2 hover"></a>
+                            <a href="#"><img src="/w0310/70_pf/jeep/images/jeepwave_w.png" alt="기본 로고"
+                                    class="logo2 default"></a>
+                            <a href="#"><img src="/w0310/70_pf/jeep/images/jeepwave.png" alt="호버 로고"
+                                    class="logo2 hover"></a>
                         </div>
                     </li>
                 </ul>
             </nav>
+            <div class="search_container">
+                <img src="images/search_w.svg" alt="기본 서치" class="sclogo default">
+                <img src="images/search.svg" alt="기본 서치" class="sclogo hover">
+            </div>
         </div>
     </header>
     <div class="container">
-        <div class="section">Section 1</div>
+        <div class="section">
+            <div class="video_bg">
+                <iframe
+                    src="https://www.youtube.com/embed/iyyDcDQeVmQ?autoplay=1&mute=1&controls=0&loop=1&playlist=iyyDcDQeVmQ"
+                    title="YouTube video player" allowfullscreen></iframe>
+            </div>
+        </div>
         <div class="section">Section 2</div>
-        <div class="section">Section 3</div>
+        <div class="section">
+            <div class="section3_title">
+                <h2>VEHICLES</h2>
+            </div>
+            <div class="section3_contents">
+                <div class="section3_best"></div>
+                <div class="section3_tab"></div>
+            </div>
+        </div>
         <div class="section">Section 4</div>
     </div>
     <footer class="footer">Footer Area</footer>
