--- a/70_pf/jeep/index.html
+++ b/70_pf/jeep/index.html
@@ -74,8 +74,13 @@
                 <h2>VEHICLES</h2>
             </div>
             <div class="section3_contents">
-                <div class="section3_best"></div>
-                <div class="section3_tab"></div>
+                <div class="section3_new"></div>
+                <div class="section3_tab">
+                    <ul class="3_tab">
+                        <li><a href="#tabs-1">Nunc tincidunt</a></li>
+                        <li><a href="#tabs-2">Proin dolor</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="section">Section 4</div>
