--- a/70_pf/jeep/section3.html
+++ b/70_pf/jeep/section3.html
@@ -1,27 +1,85 @@
-<div id="tabs">
-    <ul>
-        <li><a href="#tabs-1">Nunc tincidunt</a></li>
-        <li><a href="#tabs-2">Proin dolor</a></li>
-    </ul>
-    <div id="tabs-1">
-        <div><img src="images/vehicles_gche.png" alt=""></div>
-        <h3>그랜드채로키</h3>
-        <div><img src="images/vehicles_gche.png" alt=""></div>
-        <h3>그랜드채로키</h3>
-        <div><img src="images/vehicles_gche.png" alt=""></div>
-        <h3>그랜드채로키</h3>
-        <div><img src="images/vehicles_gche.png" alt=""></div>
-        <h3>그랜드채로키</h3>
+<!DOCTYPE html>
+<html lang="ko">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>section3</title>
+    <link rel="stylesheet" href="css/section3.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="/w0310/70_pf/jeep/script/section3.js"></script>
+
+</head>
+
+<body>
+    <div class="section">
+        <div class="section3_title">
+            <h2>VEHICLES</h2>
+        </div>
+        <div class="section3_contents">
+            <div class="section3_new">
+                <img src="images/vehicles_gladiator.png" alt="">
+                <h3>NEW GLADIATOR</h3>
+                <p>BEYOND A PICKUP</p>
+            </div>
+            <div id="section3_tab">
+                <div>
+                    <ul>
+                        <li><a href="#tabs-1">NEW</a></li>
+                        <li><a href="#tabs-2">BEST</a></li>
+                    </ul>
+                    <div class="section3_more">
+                        <a href="#">MORE<img src="images/section3_right.svg" alt="오른쪽화살표"></a>
+                    </div>
+                </div>
+                <div id="tabs-1">
+                    <div>
+                        <div><img src="images/vehicles_gche.png" alt=""></div>
+                        <h3>GRAND CHEROKEE L</h3>
+                        <p>A LEGACY EXTENDED</p>
+                    </div>
+                    <div>
+                        <div><img src="images/vehicles_renegade.png" alt=""></div>
+                        <h3>RENEGADE</h3>
+                        <p>BORN TO BE WILD</p>
+                    </div>
+                    <div>
+                        <div><img src="images/vehicles_wrangler.png" alt=""></div>
+                        <h3>WRANGLER</h3>
+                        <p>FAMOUS FOR FREEDOM</p>
+                    </div>
+                    <div>
+                        <div><img src="images/vehicles_avenger.png" alt=""></div>
+                        <h3>AVENGER</h3>
+                        <p>ELECTRIC ADVENTURE</p>
+                    </div>
+                </div>
+
+                <div id="tabs-2">
+                    <div>
+                        <div><img src="images/vehicles_wrangler.png" alt=""></div>
+                        <h3>WRANGLER</h3>
+                        <p>FAMOUS FOR FREEDOM</p>
+                    </div>
+                    <div>
+                        <div><img src="images/vehicles_gche.png" alt=""></div>
+                        <h3>GRAND CHEROKEE L</h3>
+                        <p>A LEGACY EXTENDED</p>
+                    </div>
+                    <div>
+                        <div><img src="images/vehicles_avenger.png" alt=""></div>
+                        <h3>AVENGER</h3>
+                        <p>ELECTRIC ADVENTURE</p>
+                    </div>
+                    <div>
+                        <div><img src="images/vehicles_renegade.png" alt=""></div>
+                        <h3>RENEGADE</h3>
+                        <p>BORN TO BE WILD</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div id="tabs-2">
-        <div><img src="images/vehicles_gche.png" alt=""></div>
-        <h3>그랜드채로키</h3>
-        <div><img src="images/vehicles_gche.png" alt=""></div>
-        <h3>그랜드채로키</h3>
-        <div><img src="images/vehicles_gche.png" alt=""></div>
-        <h3>그랜드채로키</h3>
-        <div><img src="images/vehicles_gche.png" alt=""></div>
-        <h3>그랜드채로키</h3>
-    </div>
-</div>
+</body>
+
+</html>
