--- a/70_pf/jeep/index.html
+++ b/70_pf/jeep/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+    <script src="https://code.jquery.com/ui/1.14.1/jquery-ui.js"></script>
     <script src="/w0310/70_pf/jeep/script/index.js"></script>
 </head>
 
@@ -74,12 +76,65 @@
                 <h2>VEHICLES</h2>
             </div>
             <div class="section3_contents">
-                <div class="section3_new"></div>
-                <div class="section3_tab">
-                    <ul class="3_tab">
-                        <li><a href="#tabs-1">Nunc tincidunt</a></li>
-                        <li><a href="#tabs-2">Proin dolor</a></li>
-                    </ul>
+                <div class="section3_new">
+                    <img src="images/vehicles_gladiator.png" alt="">
+                    <h3>NEW GLADIATOR</h3>
+                    <p>BEYOND A PICKUP</p>
+                </div>
+                <div id="tabs">
+                    <div>
+                        <ul>
+                            <li><a href="#tabs-1" class="active">NEW</a></li>
+                            <li><a href="#tabs-2">BEST</a></li>
+                        </ul>
+                        <div class="section3_more">
+                            <a href="#">MORE<img src="images/section3_right.svg" alt="오른쪽화살표"></a>
+                        </div>
+                    </div>
+                    <div id="tabs-1">
+                        <div>
+                            <div><img src="images/vehicles_gche.png" alt=""></div>
+                            <h3>GRAND CHEROKEE L</h3>
+                            <p>A LEGACY EXTENDED</p>
+                        </div>
+                        <div>
+                            <div><img src="images/vehicles_renegade.png" alt=""></div>
+                            <h3>RENEGADE</h3>
+                            <p>BORN TO BE WILD</p>
+                        </div>
+                        <div>
+                            <div><img src="images/vehicles_wrangler.png" alt=""></div>
+                            <h3>WRANGLER</h3>
+                            <p>FAMOUS FOR FREEDOM</p>
+                        </div>
+                        <div>
+                            <div><img src="images/vehicles_avenger.png" alt=""></div>
+                            <h3>AVENGER</h3>
+                            <p>ELECTRIC ADVENTURE</p>
+                        </div>
+                    </div>
+                    <div id="tabs-2">
+                        <div>
+                            <div><img src="images/vehicles_wrangler.png" alt=""></div>
+                            <h3>WRANGLER</h3>
+                            <p>FAMOUS FOR FREEDOM</p>
+                        </div>
+                        <div>
+                            <div><img src="images/vehicles_gche.png" alt=""></div>
+                            <h3>GRAND CHEROKEE L</h3>
+                            <p>A LEGACY EXTENDED</p>
+                        </div>
+                        <div>
+                            <div><img src="images/vehicles_avenger.png" alt=""></div>
+                            <h3>AVENGER</h3>
+                            <p>ELECTRIC ADVENTURE</p>
+                        </div>
+                        <div>
+                            <div><img src="images/vehicles_renegade.png" alt=""></div>
+                            <h3>RENEGADE</h3>
+                            <p>BORN TO BE WILD</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
