--- a/70_pf/jeep/index.html
+++ b/70_pf/jeep/index.html
@@ -12,6 +12,9 @@
     <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
     <script src="https://code.jquery.com/ui/1.14.1/jquery-ui.js"></script>
     <script src="/w0310/70_pf/jeep/script/index.js"></script>
+    <!-- section3 tabs -->
+    <script type="module" src="/w0310/70_pf/jeep/script/tabs.js"></script>
+
 </head>
 
 <body>
@@ -48,9 +51,9 @@
                     <li><a href="#">고객지원</a></li>
                     <li>
                         <div class="logo_container_2">
-                            <a href="#"><img src="/w0310/70_pf/jeep/images/jeepwave_w.png" alt="기본 로고"
+                            <a href="https://www.jeep-wave.co.kr/" target="_blank"><img src="/w0310/70_pf/jeep/images/jeepwave_w.png" alt="기본 로고"
                                     class="logo2 default"></a>
-                            <a href="#"><img src="/w0310/70_pf/jeep/images/jeepwave.png" alt="호버 로고"
+                            <a href="https://www.jeep-wave.co.kr/" target="_blank"><img src="/w0310/70_pf/jeep/images/jeepwave.png" alt="호버 로고"
                                     class="logo2 hover"></a>
                         </div>
                     </li>
@@ -83,8 +86,8 @@
                 </div>
                 <div id="tabs">
                     <div>
-                        <ul>
-                            <li><a href="#tabs-1" class="active">NEW</a></li>
+                        <ul id="tabs_btn">
+                            <li><a href="#tabs-1">NEW</a></li>
                             <li><a href="#tabs-2">BEST</a></li>
                         </ul>
                         <div class="section3_more">
@@ -92,52 +95,15 @@
                         </div>
                     </div>
                     <div id="tabs-1">
-                        <div>
-                            <div><img src="images/vehicles_gche.png" alt=""></div>
-                            <h3>GRAND CHEROKEE L</h3>
-                            <p>A LEGACY EXTENDED</p>
-                        </div>
-                        <div>
-                            <div><img src="images/vehicles_renegade.png" alt=""></div>
-                            <h3>RENEGADE</h3>
-                            <p>BORN TO BE WILD</p>
-                        </div>
-                        <div>
-                            <div><img src="images/vehicles_wrangler.png" alt=""></div>
-                            <h3>WRANGLER</h3>
-                            <p>FAMOUS FOR FREEDOM</p>
-                        </div>
-                        <div>
-                            <div><img src="images/vehicles_avenger.png" alt=""></div>
-                            <h3>AVENGER</h3>
-                            <p>ELECTRIC ADVENTURE</p>
-                        </div>
+                        <!-- data -->
                     </div>
+
                     <div id="tabs-2">
-                        <div>
-                            <div><img src="images/vehicles_wrangler.png" alt=""></div>
-                            <h3>WRANGLER</h3>
-                            <p>FAMOUS FOR FREEDOM</p>
-                        </div>
-                        <div>
-                            <div><img src="images/vehicles_gche.png" alt=""></div>
-                            <h3>GRAND CHEROKEE L</h3>
-                            <p>A LEGACY EXTENDED</p>
-                        </div>
-                        <div>
-                            <div><img src="images/vehicles_avenger.png" alt=""></div>
-                            <h3>AVENGER</h3>
-                            <p>ELECTRIC ADVENTURE</p>
-                        </div>
-                        <div>
-                            <div><img src="images/vehicles_renegade.png" alt=""></div>
-                            <h3>RENEGADE</h3>
-                            <p>BORN TO BE WILD</p>
-                        </div>
+                        <!-- data -->
                     </div>
                 </div>
             </div>
-        </div>
+        </div><!-- .section3 -->
         <div class="section">Section 4</div>
     </div>
     <footer class="footer">Footer Area</footer>
