--- a/70_pf/jeep/section3.html
+++ b/70_pf/jeep/section3.html
@@ -7,7 +7,7 @@
     <title>section3</title>
     <link rel="stylesheet" href="css/section3.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/w0310/70_pf/jeep/script/section3.js"></script>
+    <script type="module" src="/w0310/70_pf/jeep/script/tabs.js"></script>
 
 </head>
 
@@ -22,9 +22,9 @@
                 <h3>NEW GLADIATOR</h3>
                 <p>BEYOND A PICKUP</p>
             </div>
-            <div id="section3_tab">
+            <div id="tabs">
                 <div>
-                    <ul>
+                    <ul id="tabs_btn">
                         <li><a href="#tabs-1">NEW</a></li>
                         <li><a href="#tabs-2">BEST</a></li>
                     </ul>
@@ -33,53 +33,15 @@
                     </div>
                 </div>
                 <div id="tabs-1">
-                    <div>
-                        <div><img src="images/vehicles_gche.png" alt=""></div>
-                        <h3>GRAND CHEROKEE L</h3>
-                        <p>A LEGACY EXTENDED</p>
-                    </div>
-                    <div>
-                        <div><img src="images/vehicles_renegade.png" alt=""></div>
-                        <h3>RENEGADE</h3>
-                        <p>BORN TO BE WILD</p>
-                    </div>
-                    <div>
-                        <div><img src="images/vehicles_wrangler.png" alt=""></div>
-                        <h3>WRANGLER</h3>
-                        <p>FAMOUS FOR FREEDOM</p>
-                    </div>
-                    <div>
-                        <div><img src="images/vehicles_avenger.png" alt=""></div>
-                        <h3>AVENGER</h3>
-                        <p>ELECTRIC ADVENTURE</p>
-                    </div>
+                    <!-- data -->
                 </div>
 
                 <div id="tabs-2">
-                    <div>
-                        <div><img src="images/vehicles_wrangler.png" alt=""></div>
-                        <h3>WRANGLER</h3>
-                        <p>FAMOUS FOR FREEDOM</p>
-                    </div>
-                    <div>
-                        <div><img src="images/vehicles_gche.png" alt=""></div>
-                        <h3>GRAND CHEROKEE L</h3>
-                        <p>A LEGACY EXTENDED</p>
-                    </div>
-                    <div>
-                        <div><img src="images/vehicles_avenger.png" alt=""></div>
-                        <h3>AVENGER</h3>
-                        <p>ELECTRIC ADVENTURE</p>
-                    </div>
-                    <div>
-                        <div><img src="images/vehicles_renegade.png" alt=""></div>
-                        <h3>RENEGADE</h3>
-                        <p>BORN TO BE WILD</p>
-                    </div>
+                    <!-- data -->
                 </div>
             </div>
         </div>
-    </div>
+    </div><!-- .section3 -->
 </body>
 
 </html>
