--- a/70_pf/jeep/index.html
+++ b/70_pf/jeep/index.html
@@ -43,25 +43,25 @@
                     <li><a href="#">구입문의</a></li>
                     <li>
                         <div class="logo_container">
-                            <a href="#"><img src="/w0310/70_pf/jeep/images/logo_w.png" alt="기본 로고"
+                            <a href="#"><img src="/w0310/70_pf/jeep/images/nav/logo_w.png" alt="기본 로고"
                                     class="logo default"></a>
-                            <a href="#"><img src="/w0310/70_pf/jeep/images/logo.png" alt="호버 로고" class="logo hover"></a>
+                            <a href="#"><img src="/w0310/70_pf/jeep/images/nav/logo.png" alt="호버 로고" class="logo hover"></a>
                         </div>
                     </li>
                     <li><a href="#">고객지원</a></li>
                     <li>
                         <div class="logo_container_2">
-                            <a href="https://www.jeep-wave.co.kr/" target="_blank"><img src="/w0310/70_pf/jeep/images/jeepwave_w.png" alt="기본 로고"
+                            <a href="https://www.jeep-wave.co.kr/" target="_blank"><img src="/w0310/70_pf/jeep/images/nav/jeepwave_w.png" alt="기본 로고"
                                     class="logo2 default"></a>
-                            <a href="https://www.jeep-wave.co.kr/" target="_blank"><img src="/w0310/70_pf/jeep/images/jeepwave.png" alt="호버 로고"
+                            <a href="https://www.jeep-wave.co.kr/" target="_blank"><img src="/w0310/70_pf/jeep/images/nav/jeepwave.png" alt="호버 로고"
                                     class="logo2 hover"></a>
                         </div>
                     </li>
                 </ul>
             </nav>
             <div class="search_container">
-                <img src="images/search_w.svg" alt="기본 서치" class="sclogo default">
-                <img src="images/search.svg" alt="기본 서치" class="sclogo hover">
+                <img src="/w0310/70_pf/jeep/images/nav/search_w.svg" alt="기본 서치" class="sclogo default">
+                <img src="/w0310/70_pf/jeep/images/nav/search.svg" alt="기본 서치" class="sclogo hover">
             </div>
         </div>
     </header>
@@ -80,7 +80,7 @@
             </div>
             <div class="section3_contents">
                 <div class="section3_new">
-                    <img src="images/vehicles_gladiator.png" alt="">
+                    <img src="images/section3/vehicles_gladiator.png" alt="">
                     <h3>NEW GLADIATOR</h3>
                     <p>BEYOND A PICKUP</p>
                 </div>
@@ -91,7 +91,7 @@
                             <li><a href="#tabs-2">BEST</a></li>
                         </ul>
                         <div class="section3_more">
-                            <a href="#">MORE<img src="images/section3_right.svg" alt="오른쪽화살표"></a>
+                            <a href="#">MORE<img src="images/section3/section3_right.svg" alt="오른쪽화살표"></a>
                         </div>
                     </div>
                     <div id="tabs-1">
