--- a/70_pf/jeep/section2.html
+++ b/70_pf/jeep/section2.html
@@ -10,9 +10,10 @@
 </head>
 
 <body>
+    
     <div class="section">
         <div class="inner">
-            <div class="fav_txt">
+            <div id="fav_txt">
                 <h2>
                     <span>PICK</span>
                     <span>YOUR</span>
@@ -22,7 +23,7 @@
                     메가MGC커피에서 즐겨보세요</p>
                 <p>기본 24oz(680ml)의 많은 양의 <strong>빅사이즈</strong> 커피<br>100% 아라비카 <strong>프리미엄 원두</strong>를 국내 로스팅하여 항상 신선한 원두를 가맹점에 공급<br>유통과정을 최소화하여 최대한 저렴하고 <strong>합리적인 가격</strong>에 제공<br>재미있는 비주얼과 콘셉트, 시즌마다 출시되는 <strong>트렌디한 음료</strong></p>
             </div>
-            <div class="fav_img">
+            <div id="fav_img">
                 <div><img src="images/10030.jpg" alt="KBPay"></div>
                 <div><img src="images/10031.jpg" alt="신한쏠"></div>
                 <div><img src="images/10032.jpg" alt="라이즈오디세이"></div>
