--- a/70_pf/jeep/index.html
+++ b/70_pf/jeep/index.html
@@ -45,16 +45,18 @@
                         <div class="logo_container">
                             <a href="#"><img src="/w0310/70_pf/jeep/images/nav/logo_w.png" alt="기본 로고"
                                     class="logo default"></a>
-                            <a href="#"><img src="/w0310/70_pf/jeep/images/nav/logo.png" alt="호버 로고" class="logo hover"></a>
+                            <a href="#"><img src="/w0310/70_pf/jeep/images/nav/logo.png" alt="호버 로고"
+                                    class="logo hover"></a>
                         </div>
                     </li>
                     <li><a href="#">고객지원</a></li>
                     <li>
                         <div class="logo_container_2">
-                            <a href="https://www.jeep-wave.co.kr/" target="_blank"><img src="/w0310/70_pf/jeep/images/nav/jeepwave_w.png" alt="기본 로고"
+                            <a href="https://www.jeep-wave.co.kr/" target="_blank"><img
+                                    src="/w0310/70_pf/jeep/images/nav/jeepwave_w.png" alt="기본 로고"
                                     class="logo2 default"></a>
-                            <a href="https://www.jeep-wave.co.kr/" target="_blank"><img src="/w0310/70_pf/jeep/images/nav/jeepwave.png" alt="호버 로고"
-                                    class="logo2 hover"></a>
+                            <a href="https://www.jeep-wave.co.kr/" target="_blank"><img
+                                    src="/w0310/70_pf/jeep/images/nav/jeepwave.png" alt="호버 로고" class="logo2 hover"></a>
                         </div>
                     </li>
                 </ul>
@@ -75,31 +77,33 @@
         </div>
         <div class="section">Section 2</div>
         <div class="section">
-            <div class="section3_title">
-                <h2>VEHICLES</h2>
-            </div>
-            <div class="section3_contents">
-                <div class="section3_new">
-                    <img src="images/section3/vehicles_gladiator.png" alt="">
-                    <h3>NEW GLADIATOR</h3>
-                    <p>BEYOND A PICKUP</p>
+            <div class="section3_container">
+                <div class="section3_title">
+                    <h2>VEHICLES</h2>
                 </div>
-                <div id="tabs">
-                    <div>
-                        <ul id="tabs_btn">
-                            <li><a href="#tabs-1">NEW</a></li>
-                            <li><a href="#tabs-2">BEST</a></li>
-                        </ul>
-                        <div class="section3_more">
-                            <a href="#">MORE<img src="images/section3/section3_right.svg" alt="오른쪽화살표"></a>
+                <div class="section3_contents">
+                    <div class="section3_new">
+                        <img src="images/section3/vehicles_gladiator.png" alt="">
+                        <h3>NEW GLADIATOR</h3>
+                        <p>BEYOND A PICKUP</p>
+                    </div>
+                    <div id="tabs">
+                        <div>
+                            <ul id="tabs_btn">
+                                <li><a href="#tabs-1">NEW</a></li>
+                                <li><a href="#tabs-2">BEST</a></li>
+                            </ul>
+                            <div class="section3_more">
+                                <a href="#">MORE<img src="images/section3/section3_right.svg" alt="오른쪽화살표"></a>
+                            </div>
                         </div>
-                    </div>
-                    <div id="tabs-1">
-                        <!-- data -->
-                    </div>
+                        <div id="tabs-1">
+                            <!-- data -->
+                        </div>
 
-                    <div id="tabs-2">
-                        <!-- data -->
+                        <div id="tabs-2">
+                            <!-- data -->
+                        </div>
                     </div>
                 </div>
             </div>
