--- a/70_pf/jeep/section2.html
+++ b/70_pf/jeep/section2.html
@@ -6,30 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>section2</title>
     <link rel="stylesheet" href="css/section2.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script type="module" src="/w0310/70_pf/jeep/script/section2.js"></script>
 
 </head>
 
 <body>
-    
+    <div class="section">s1</div>
     <div class="section">
-        <div class="inner">
-            <div id="fav_txt">
-                <h2>
-                    <span>PICK</span>
-                    <span>YOUR</span>
-                    <span>FAVORITE</span>
-                </h2>
-                <p>다양한 메뉴를<br>
-                    메가MGC커피에서 즐겨보세요</p>
-                <p>기본 24oz(680ml)의 많은 양의 <strong>빅사이즈</strong> 커피<br>100% 아라비카 <strong>프리미엄 원두</strong>를 국내 로스팅하여 항상 신선한 원두를 가맹점에 공급<br>유통과정을 최소화하여 최대한 저렴하고 <strong>합리적인 가격</strong>에 제공<br>재미있는 비주얼과 콘셉트, 시즌마다 출시되는 <strong>트렌디한 음료</strong></p>
-            </div>
-            <div id="fav_img">
-                <div><img src="images/10030.jpg" alt="KBPay"></div>
-                <div><img src="images/10031.jpg" alt="신한쏠"></div>
-                <div><img src="images/10032.jpg" alt="라이즈오디세이"></div>
+        <div class="container2">
+            <div class="inner">
+                <div id="fav_txt">
+                    <h2 class="scroll_motion">
+                        <span>PICK</span>
+                        <span>YOUR</span>
+                        <span>FAVORITE</span>
+                    </h2>
+                    <p class="scroll_motion">다양한 메뉴를<br>
+                        메가MGC커피에서 즐겨보세요</p>
+                    <p class="scroll_motion">기본 24oz(680ml)의 많은 양의 <strong>빅사이즈</strong> 커피<br>100% 아라비카 <strong>프리미엄 원두</strong>를 국내 로스팅하여 항상
+                        신선한
+                        원두를 가맹점에 공급<br>유통과정을 최소화하여 최대한 저렴하고 <strong>합리적인 가격</strong>에 제공<br>재미있는 비주얼과 콘셉트, 시즌마다 출시되는
+                        <strong>트렌디한 음료</strong>
+                    </p>
+                    <a href="#" class="scroll_motion">자세히 보기</a>
+                </div>
+                <div id="fav_img">
+                    <div><img src="images/10030.jpg" alt="KBPay"></div>
+                    <div><img src="images/10031.jpg" alt="신한쏠"></div>
+                    <div><img src="images/10032.jpg" alt="라이즈오디세이"></div>
+                </div>
             </div>
         </div>
     </div><!-- .section2 -->
+    <div class="section">s3</div>
+    <div class="section">s4</div>
+
 </body>
 
 </html>
