--- a/70_pf/jeep/index.html
+++ b/70_pf/jeep/index.html
@@ -8,8 +8,10 @@
     <title>Jeep</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"
+        integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://code.jquery.com/ui/1.14.1/jquery-ui.js"></script>
     <script src="/w0310/70_pf/jeep/script/index.js"></script>
     <!-- section3 tabs -->
@@ -24,23 +26,144 @@
             <nav>
                 <ul class="main">
                     <li><a href="#">모델소개</a>
-                        <ul class="sub_1">
-                            <li>
-                                <div class="model_1">
-                                    <div class="model_container">
-                                        <div class="img">
-                                            <img src="/w0310/70_pf/jeep/images/sub/model_1.png" alt="">
-                                        </div>
-                                        <div class="model_txt">
-                                            <div class="model_uptxt"></div>
-                                            <div class="model_downtxt"></div>
-                                        </div>
+                        <div class="sub_1">
+                            <ul>
+                                <li class="sub_left">
+                                    <div class="sub_title">
+                                        <p>모델소개</p>
                                     </div>
-                                </div>
-                            </li>
-                        </ul>
+                                    <div class="sub_exp">
+                                        <p>함께 모험할<br>Jeep를<br>찾아보세요.</p>
+                                    </div>
+                                </li>
+                                <li class="sub_line"></li>
+                                <li class="sub_1_right">
+                                    <div class="model">
+                                        <div class="model_container">
+                                            <div class="img">
+                                                <img src="/w0310/70_pf/jeep/images/sub/model_1.png" alt="모델1">
+                                            </div>
+                                            <div class="model_txt_alert">
+                                                <div class="model_txt">
+                                                    <div class="model_uptxt">
+                                                        <p>NEW GLADIATOR</p>
+                                                    </div>
+                                                    <div class="model_downtxt">
+                                                        <p>BEYOND A PICKUP</p>
+                                                    </div>
+                                                </div>
+                                                <div class="model_purchase">
+                                                    <div><a href="#">시승신청<img src="images/nav/right.svg"
+                                                                alt="오른쪽화살표버튼"></a>
+                                                    </div>
+                                                    <div><a href="#">견적요청<img src="images/nav/right.svg"
+                                                                alt="오른쪽화살표버튼"></a></div>
+                                                </div>
+                                            </div>
+                                            <div class="model_new"><span>NEW</span></div>
+                                            <div class="model_plus"><a href="#">자세히 보기</a></div>
+                                        </div><!-- //.model_container -->
+                                    </div><!-- //.model -->
+                                    <div class="model">
+                                        <div class="model_container">
+                                            <div class="img">
+                                                <img src="/w0310/70_pf/jeep/images/sub/model_2.png" alt="모델2">
+                                            </div>
+                                            <div class="model_txt_alert">
+                                                <div class="model_txt">
+                                                    <div class="model_uptxt">
+                                                        <p>GRAND CHEROKEE L</p>
+                                                    </div>
+                                                    <div class="model_downtxt">
+                                                        <p>A LEGACY EXTENDED</p>
+                                                    </div>
+                                                </div>
+                                                <div class="model_purchase">
+                                                    <div><a href="#">시승신청<img src="images/nav/right.svg"
+                                                                alt="오른쪽화살표버튼"></a>
+                                                    </div>
+                                                    <div><a href="#">견적요청<img src="images/nav/right.svg"
+                                                                alt="오른쪽화살표버튼"></a></div>
+                                                </div>
+                                            </div>
+                                            <div class="model_plus"><a href="#">자세히 보기</a></div>
+                                        </div><!-- //.model_container -->
+                                    </div><!-- //.model -->
+                                    <div class="model">
+                                        <div class="model_container">
+                                            <div class="img">
+                                                <img src="/w0310/70_pf/jeep/images/sub/model_3.png" alt="모델3">
+                                            </div>
+                                            <div class="model_txt_alert">
+                                                <div class="model_txt">
+                                                    <div class="model_uptxt">
+                                                        <p>RENEGADE</p>
+                                                    </div>
+                                                    <div class="model_downtxt">
+                                                        <p>BORN TO NE WILD</p>
+                                                    </div>
+                                                </div>
+                                                <div class="model_purchase">
+                                                    <div><a href="#">시승신청<img src="images/nav/right.svg"
+                                                                alt="오른쪽화살표버튼"></a>
+                                                    </div>
+                                                    <div><a href="#">견적요청<img src="images/nav/right.svg"
+                                                                alt="오른쪽화살표버튼"></a></div>
+                                                </div>
+                                            </div>
+                                            <div class="model_plus"><a href="#">자세히 보기</a></div>
+                                        </div><!-- //.model_container -->
+                                    </div><!-- //.model -->
+                                    <div class="model">
+                                        <div class="model_container">
+                                            <div class="img">
+                                                <img src="/w0310/70_pf/jeep/images/sub/model_4.png" alt="모델4">
+                                            </div>
+                                            <div class="model_txt_alert">
+                                                <div class="model_txt">
+                                                    <div class="model_uptxt">
+                                                        <p>GRAND CHEROKEE</p>
+                                                    </div>
+                                                    <div class="model_downtxt">
+                                                        <p>LEGACY EXTENDED</p>
+                                                    </div>
+                                                </div>
+                                                <div class="model_purchase">
+                                                    <div><a href="#">시승신청<img src="images/nav/right.svg"
+                                                                alt="오른쪽화살표버튼"></a>
+                                                    </div>
+                                                    <div><a href="#">견적요청<img src="images/nav/right.svg"
+                                                                alt="오른쪽화살표버튼"></a></div>
+                                                </div>
+                                            </div>
+                                            <div class="model_plus"><a href="#">자세히 보기</a></div>
+                                        </div><!-- //.model_container -->
+                                    </div><!-- //.model -->
+                                </li><!-- //.sub_right -->
+                            </ul><!-- //.sub_1 -->
+                        </div>
                     </li>
-                    <li><a href="#">구입문의</a></li>
+                    <li><a href="#">구입문의</a>
+                        <div class="sub_2">
+                            <ul>
+                                <li class="sub_left">
+                                    <div class="sub_title">
+                                        <p>구입문의</p>
+                                    </div>
+                                    <div class="sub_exp">
+                                        <p>당신만의 Jeep를<br>찾아보세요.</p>
+                                    </div>
+                                </li>
+                                <li class="sub_line"></li>
+                                <li class="sub_2_right">
+                                    <div><a href="#">견적요청</a></div>
+                                    <div><a href="#">프로모션</a></div>
+                                    <div><a href="#">시승신청</a></div>
+                                    <div><a href="#">카탈로그</a></div>
+                                </li>
+                            </ul><!-- //.sub_2 -->
+                        </div>
+                    </li>
                     <li>
                         <div class="logo_container">
                             <a href="#"><img src="/w0310/70_pf/jeep/images/nav/logo_w.png" alt="기본 로고"
@@ -49,7 +172,52 @@
                                     class="logo hover"></a>
                         </div>
                     </li>
-                    <li><a href="#">고객지원</a></li>
+                    <li><a href="#">고객지원</a>
+                        <div class="sub_3">
+                            <ul>
+                                <li class="sub_left">
+                                    <div class="sub_title">
+                                        <p>고객지원</p>
+                                    </div>
+                                    <div class="sub_exp">
+                                        <p>Jeep와 함께<br>모험을 준비하세요.</p>
+                                    </div>
+                                </li>
+                                <li class="sub_line"></li>
+                                <li class="sub_3_right">
+                                    <ul>
+                                        <li><a href="#">서비스 프로그램</a>
+                                            <ul>
+                                                <li><a href="#">연장 보증</a></li>
+                                                <li><a href="#">소모품 교환 프로그램</a></li>
+                                            </ul>
+                                        </li>
+                                        <li><a href="#">부품 & 악세사리</a>
+                                            <ul>
+                                                <li><a href="#">부품 가격정보</a></li>
+                                                <li><a href="#">엑세서리 카탈로그</a></li>
+                                                <li><a href="#">전기차 배터리 정보</a></li>
+                                            </ul>
+                                        </li>
+                                        <li><a href="#">차량 지원</a>
+                                            <ul>
+                                                <li><a href="#">정비자료</a></li>
+                                                <li><a href="#">전기에어장치<br>무선 업데이트(OTA)</a></li>
+                                            </ul>
+                                        </li>
+                                        <li><a href="#">고객 안내</a>
+                                            <ul>
+                                                <li><a href="#">전시장/서비스센터 안내</a></li>
+                                                <li><a href="#">문의하기</a></li>
+                                            </ul>
+                                        </li>
+                                    </ul>
+
+
+                                </li>
+                            </ul><!-- //.sub_3 -->
+                        </div>
+                    </li>
                     <li>
                         <div class="logo_container_2">
                             <a href="https://www.jeep-wave.co.kr/" target="_blank"><img
@@ -67,7 +235,10 @@
             </div>
         </div>
     </header>
+
+
     <div class="container">
+        <!-- section1 -->
         <div class="section">
             <div class="video_bg">
                 <iframe
@@ -75,7 +246,9 @@
                     title="YouTube video player" allowfullscreen></iframe>
             </div>
         </div>
+        <!-- section2 -->
         <div class="section">Section 2</div>
+        <!-- section3 -->
         <div class="section">
             <div class="section3_container">
                 <div class="section3_title">
@@ -105,11 +278,15 @@
                             <!-- data -->
                         </div>
                     </div>
-                </div>
-            </div>
+                </div><!-- //.section3_contents -->
+            </div><!-- //.section3_container -->
         </div><!-- .section3 -->
+        <!-- section4 -->
         <div class="section">Section 4</div>
-    </div>
+    </div><!-- //.container -->
+
+
+    <!-- footer -->
     <footer class="footer">Footer Area</footer>
 
 
